--- a/index.html
+++ b/index.html
@@ -5,34 +5,27 @@
         <title>Welcome</title>
     </head>
     <body>
-        <a href="about.html"> About </a>  | <a href="./"> Home </a>
+        <a href="About.html"> About </a>  | <a href="./"> Home </a> | <a href="Contact.html"> Contact</a> | <a href="Gallery.html"> Gallery</a> | <a href="News and Event.html"> News and Event</a> | <a href="Projects.html"> Projects</a>  | <a href="Volunteer.html"> Volunteer </a>
         
-        <h1> Heading 1</h1>
-        <h2> Heading 2</h2>
-        <h3> Heading 3</h3>
-        <h4> Heading 4</h4>
-        <h5> Heading 5</h5>
-        <h6> Heading 6</h6>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-            incididunt ut labore et dolore magna aliqua. <br> Ut enim ad minim veniam, 
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-         Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        <h1> AMANI PROJECT</h1>
+        <h2> WELCOME TO AMANI PROJECT PAGE</h2>
+        
+        <p>Through KCH and our associated projects, we help around 400 children in Kenya every year. 
+             We have a committed team of Kenyan staff including teachers, house mothers, management 
+             and social workers, all of whom have the single goal of providing the best care, protection
+              and education to the children we help.</p>
+
+               <!-- Heading 2 starts here-->
          <h2 style ="text-align: center ;
           color:rgb(0, 225, 255); 
           text-decoration: underline; 
           text-transform: uppercase;
            font-style: italic; 
-           font-weight: 600;"> Heading 2</h2>
+           font-weight: 600;"> Our mission and accomplishment around the country</h2> 
 
-           <!-- Heading 2 starts here--> 
+         <p>"Our goal is to see that every child in every situation gets the best care from KCH"
 
-         <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
-             totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. 
-             Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. 
-             Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, 
-             sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur,
-             vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
+            Kasila Mutevu - Social Worker</p>
 
              <img src="image/rolex.jpg" alt= "" width="30%"> 
         <ul>
