--- a/Gallery.html
+++ b/Gallery.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
+<a href="About.html"> About </a>  | <a href="./"> Home </a> | <a href="Contact.html"> Contact</a> | <a href="Gallery.html"> Gallery</a> | <a href="News and Event.html"> News and Event</a> | <a href="Projects.html"> Projects</a>  | <a href="Volunteer.html"> Volunteer </a>
 <body>
     
         <h1 >Gallery</h1>
