--- a/Projects.html
+++ b/Projects.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
+<a href="About.html"> About </a>  | <a href="./"> Home </a> | <a href="Contact.html"> Contact</a> | <a href="Gallery.html"> Gallery</a> | <a href="News and Event.html"> News and Event</a> | <a href="Projects.html"> Projects</a>  | <a href="Volunteer.html"> Volunteer </a>
 <body>
     <h1>Amani projects</h1>
     <h1>Projects</h1>
@@ -22,7 +24,7 @@
         <li> KCH Outreach Programme:</li>
         <li> Adoption Services</li>
 <p>
-<font color="Blue" size="6"> JUNE 2024 PROJECT CALENDER</font>
+<font color="red" size="5"> JUNE 2024 PLAN </font>
 </p>
 <ul>
     <table border="3"> 
@@ -39,10 +41,10 @@
         <tr>
             <td> <b>1</b></td>
             <td> <b>2</b></td>
-            <td> <b>3</b></td>
+            <td> <b> <b> <font color="red">3</font> </b></td>
             <td> <b>4</b></td>
             <td> <b>5</b></td>
-            <td> <b> <b> <font color="red">6</font> </b></td>
+            <td> <b>6</b></td>
             <td> <b> <b> <font color="red">7</font> </b></td>
 
         </tr>
@@ -51,29 +53,29 @@
             <td> <b>8</b></td>
             <td> <b>9</b></td>
             <td> <b>10</b></td>
-            <td> <b>11</b></td>
+            <td> <b> <b> <font color="red">11</font> </b></td>
             <td> <b>12</b></td>
             <td> <b> <b> <font color="red">13</font> </b></td>
-            <td> <b> <b> <font color="red">14</font> </b></td>
+            <td> <b>14</b></td>
         </tr>
 
         <tr>
             <td> <b>15</b></td>
-            <td> <b>16</b></td>
+            <td> <b> <b> <font color="red">16</font> </b></td>
             <td> <b>17</b></td>
             <td> <b>18</b></td>
             <td> <b>19</b></td>
-            <td> <b> <b> <font color="red">20</font> </b></td>
-            <td> <b> <b> <font color="red">21</font> </b></td>
+            <td> <b>20</b></td>
+            <td> <b>21</b></td>
         </tr>
 
         <tr>
             <td> <b>22</b></td>
             <td> <b>23</b></td>
-            <td> <b>24</b></td>
+            <td> <b> <b> <font color="red">24</font> </b></td>
             <td> <b>25</b></td>
             <td> <b>26</b></td>
-            <td> <b> <b> <font color="red">27</font> </b></td>
+            <td> <b>27</b></td>
             <td> <b> <b> <font color="red">28</font> </b></td>
         </tr>
 
