--- a/Contact.html
+++ b/Contact.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.
+    min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY
+    /NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
 </head>
+
+<a href="About.html"> About </a>  | <a href="./"> Home </a> | <a href="Contact.html"> Contact</a> | <a href="Gallery.html"> Gallery</a> | <a href="News and Event.html"> News and Event</a> | <a href="Projects.html"> Projects</a>  | <a href="Volunteer.html"> Volunteer </a>
 <body>
 
     
@@ -22,7 +29,7 @@
     <li> T: +254 (0)1738 633264 </li>
     <li>E: Chimoto@110@gmail.com</li>
 
-    <h2>Tanzania</h2>
+<h2>Tanzania</h2>
 <ol >
     <li> Tanzania Children’s Homes</li>
     <li> The Ujamaa </li>
@@ -31,7 +38,7 @@
     <li> T: +255 (0)1738 633264 </li>
     <li>E:Tmanazali@110@gmail.com</li>
 
-    <h2>UK</h2>
+<h2>UK</h2>
 <ol >
     <li> UK Children’s Homes</li>
     <li> The Castle</li>
@@ -44,6 +51,7 @@
    <style> body {
     background-image: url(image/wall.jpg);
 }
+
 
  
 </body>
