--- a/Volunteer.html
+++ b/Volunteer.html
@@ -5,7 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
+<a href="About.html"> About </a>  | <a href="./"> Home </a> | <a href="Contact.html"> Contact</a> | <a href="Gallery.html"> Gallery</a> | <a href="News and Event.html"> News and Event</a> | <a href="Projects.html"> Projects</a>  | <a href="Volunteer.html"> Volunteer </a>
 <body>
+
+                                                     <h1>Forms : Volunteer Login Page</h1>
+                                                    <form action="" method="post"> 
+                                                     <label for="fn"> Fullname:</label><br>
+                                                    <input type="text" id="fn">
+                                                    </form>
+
+                                                        <form action="" methods="post">
+                                                     <label for="fn"> Password:</label><br>
+                                                    <input type="text" id="fn">
+                                                    </form>
+
     <h1> Volunteering</h1>
     <p>
         “You make a living by what you get.  You make a life by what you give…” – Winston Churchill
