--- a/About.html
+++ b/About.html
@@ -6,9 +6,10 @@
     <title>About us</title>
 </head>
 <body>
-    <a href="About.html"> About </a>  | <a href="./"> Home </a> | <a href="Contact.html"> Contact</a> | <a href="Gallery.html"> Gallery</a> | <a href="News and Event.html"> News and Event</a> | <a href="Projects.html"> Projects</a>  | <a href="Volunteer.html"> Volunteer </a>
+    <a href="About.html"> About </a>  | <a href="index.html"> Home </a> | <a href="Contact.html"> Contact</a> | <a href="Gallery.html"> Gallery</a> | <a href="News and Event.html"> News and Event</a> | <a href="Projects.html"> Projects</a>  | <a href="Volunteer.html"> Volunteer </a>
 
-    <h1>About us</h1>
+    <h1>About us</h1>  <img src="image/Picture1.jpg" alt="" width="10%">
+    <h2> Project Amani </h2>
     <p>Kenya Children’s Homes (KCH) was established by the Balcraig Foundation in 2002 when the Scottish charity took over the running 
         of the former Thomas Barnardo House in Nairobi. The orphanage is the flagship project of KCH 
         and is home to 60 orphaned, destitute and abandoned children.
@@ -24,5 +25,10 @@
         
         Beth Waithera, Laundry"</p>
         <img src="image/gg.jpg" alt="" width="50%"> <p>Vice Chairperson Ms.Amina Alexis</p>
+
+        
+<style> body {
+    background-image: url(image/hh.jpg);
+}
 </body>
 </html>
