--- a/Projects.html
+++ b/Projects.html
@@ -6,10 +6,22 @@
     <title>Document</title>
 </head>
 
-<a href="About.html"> About </a>  | <a href="./"> Home </a> | <a href="Contact.html"> Contact</a> | <a href="Gallery.html"> Gallery</a> | <a href="News and Event.html"> News and Event</a> | <a href="Projects.html"> Projects</a>  | <a href="Volunteer.html"> Volunteer </a>
+<a href="About.html"> About </a>  | <a href="index.html"> Home </a> | <a href="Contact.html"> Contact</a> | <a href="Gallery.html"> Gallery</a> | <a href="News and Event.html"> News and Event</a> | <a href="Projects.html"> Projects</a>  | <a href="Volunteer.html"> Volunteer </a>
 <body>
-    <h1>Amani projects</h1>
+    <h1 style ="text-align: center ;
+    color:rgb(255, 0, 0); 
+    text-decoration: underline; 
+    text-transform: uppercase;
+     font-style: italic; 
+     font-weight: 600;"
+
+>Amani projects</h1>
+<br>
+<img src="image/Picture1.jpg" alt="" width="10%">
+<h3>Project Amani</h3>
+
     <h1>Projects</h1>
+
     <p>
         Impact: KCH, along with its associated projects, helps approximately 400 children in Kenya each year. 
         Their dedicated Kenyan staff—teachers, house mothers, management, and social workers—strive to provide the best care, 
