--- a/News and Event.html
+++ b/News and Event.html
@@ -6,9 +6,17 @@
     <title>Document</title>
 </head>
 
-<a href="About.html"> About </a>  | <a href="./"> Home </a> | <a href="Contact.html"> Contact</a> | <a href="Gallery.html"> Gallery</a> | <a href="News and Event.html"> News and Event</a> | <a href="Projects.html"> Projects</a>  | <a href="Volunteer.html"> Volunteer </a>
+<a href="About.html"> About </a>  | <a href="index.html"> Home </a> | <a href="Contact.html"> Contact</a> | <a href="Gallery.html"> Gallery</a> | <a href="News and Event.html"> News and Event</a> | <a href="Projects.html"> Projects</a>  | <a href="Volunteer.html"> Volunteer </a>
 <body>
-    <h1> News </h1>
+    <h1 style ="text-align: center ;
+    color:rgb(255, 0, 0); 
+    text-decoration: underline; 
+    text-transform: uppercase;
+     font-style: italic; 
+     font-weight: 600;"> News and Events  </h1>
+    <br>
+    <img src="image/Picture1.jpg" alt="" width="10%">
+    <h3>Project Amani</h3>
     <h2>Temporary Suspension of KCH Volunteering Programme</h2>
    <h3> 26th March 2024</h3>
    <p>In light of recent developments and announcements relating to the COVID-19 (Coronavirus) pandemic, the KCH Volunteering Programme has been suspended with immediate effect.
@@ -33,9 +41,11 @@ build Stagecoach into the success it has become and thank all our staff and supp
    </p>
 
    <img src="image/Anna .jpg" alt= "" width="30%"> 
-   <style> body {
-    background-image: url(image/wall.jpg);
+   
+<style> body {
+    background-image: url(image/hh.jpg);
 }
+
 
 </style>
 
