--- a/Volunteer.html
+++ b/Volunteer.html
@@ -6,10 +6,20 @@
     <title>Document</title>
 </head>
 
-<a href="About.html"> About </a>  | <a href="./"> Home </a> | <a href="Contact.html"> Contact</a> | <a href="Gallery.html"> Gallery</a> | <a href="News and Event.html"> News and Event</a> | <a href="Projects.html"> Projects</a>  | <a href="Volunteer.html"> Volunteer </a>
+<a href="About.html"> About </a>  | <a href="index.html"> Home </a> | <a href="Contact.html"> Contact</a> | <a href="Gallery.html"> Gallery</a> | <a href="News and Event.html"> News and Event</a> | <a href="Projects.html"> Projects</a>  | <a href="Volunteer.html"> Volunteer </a>
 <body>
 
-                                                     <h1>Forms : Volunteer Login Page</h1>
+                                                     <h1 style ="text-align: center ;
+                                                     color:rgb(255, 0, 0); 
+                                                     text-decoration: underline; 
+                                                     text-transform: uppercase;
+                                                      font-style: italic; 
+                                                      font-weight: 600;">Forms : Volunteer Login Page</h1>
+
+<br>
+<img src="image/Picture1.jpg" alt="" width="10%">
+<h3>Project Amani</h3>
+
                                                     <form action="" method="post"> 
                                                      <label for="fn"> Fullname:</label><br>
                                                     <input type="text" id="fn">
@@ -73,7 +83,6 @@ in various programmes to meet the needs of his family and children.
 <style> body {
     background-image: url(image/hh.jpg);
 }
-
 </style>
 
 </body>
