--- a/Contact.html
+++ b/Contact.html
@@ -8,11 +8,6 @@
     
 </head>
 
-<<<<<<< HEAD
-
-=======
-<a href="About.html"> About </a>  | <a href="./"> Home </a> | <a href="Contact.html"> Contact</a> | <a href="Gallery.html"> Gallery</a> | <a href="News and Event.html"> News and Event</a> | <a href="Projects.html"> Projects</a>  | <a href="Volunteer.html"> Volunteer </a>
->>>>>>> 6cf1f140eb258b649be5f81bfe066c8fe92d2fd3
 <body>
 
     
@@ -86,6 +81,7 @@
     <style> body {
         background-image: url(image/hh.jpg);
     }
+ </style>
  
 </body>
 </html>
