--- a/index.html
+++ b/index.html
@@ -5,19 +5,9 @@
         <title>Welcome</title>
     </head>
     <body>
-        <a href="about.html"> About </a>  | <a href="./"> Home </a>
+        <a href="About.html"> About </a>  | <a href="index.html"> Home </a> | <a href="Contact.html"> Contact</a> | <a href="Gallery.html"> Gallery</a> | <a href="News and Event.html"> News and Event</a> | <a href="Projects.html"> Projects</a>  | <a href="Volunteer.html"> Volunteer </a>
         
-        <h1> Heading 1</h1>
-        <h2> Heading 2</h2>
-        <h3> Heading 3</h3>
-        <h4> Heading 4</h4>
-        <h5> Heading 5</h5>
-        <h6> Heading 6</h6>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-            incididunt ut labore et dolore magna aliqua. <br> Ut enim ad minim veniam, 
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-         Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        
          <h2 style ="text-align: center ;
           color:rgb(0, 225, 255); 
           text-decoration: underline; 
@@ -37,7 +27,6 @@
         text-transform: uppercase;
          font-style: italic; 
          font-weight: 600;"
-
 >Merchandise for sale inorder to support the organisation</h2>
 
         <table border = "1px" style="border: 1px solid #773737; width: 50%;">  
