--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
           text-transform: uppercase;
            font-style: italic; 
            font-weight: 600;"> Our mission and accomplishment around the country</h2> 
+           <br>
+           <img src="image/Picture1.jpg" alt="" width="10%">
+           <h3>Project Amani</h3>
+           
 
          <p>"Our goal is to see that every child in every situation gets the best care from KCH"
 
