--- a/News and Event.html
+++ b/News and Event.html
@@ -19,6 +19,61 @@
     <br>
     <img src="image/Picture1.jpg" alt="" width="10%">
     <h3>Project Amani</h3>
+
+    <br>
+
+    <h3 style ="text-align: center ;
+color:rgb(255, 0, 0); 
+text-decoration: underline; 
+text-transform: uppercase;
+ font-style: italic; 
+ font-weight: 600;">Register for the events near you</h3>
+<form> 
+    Your name <br>
+    <input type="text" name = "" placeholder="Your Name"> <br> <br>
+
+    YourAddress <br>
+    <input type="text" name = "" placeholder="Your Address"> <br> <br>
+
+    Your date of birth
+    <select class="month">
+    <option value="Month"> Month </option>
+    <option value="January"> January </option>
+    <option value="Febuary"> Febuary </option>
+    <option value="March"> March </option>
+    <option value="April"> April </option>
+    <option value="June"> June </option>
+    <option value="July"> July </option>
+    <option value="August"> August </option>
+    <option value="September"> September </option>
+    <option value="October"> October </option>
+    <option value="Novermber"> November </option>
+    <option value="December"> December </option>
+    </select>
+
+    <select class="Day">
+        <option value="Day"> Day </option>
+        <option value="Monday"> Monday </option>
+        <option value="Tuesday"> Tuesday </option>
+        <option value="Wednesday"> Wedneday </option>
+        <option value="Thursday"> Thursday </option>
+        <option value="Saturday"> Saturday </option>
+        <option value="Sunday"> Sunday </option>
+        </select>
+    
+        <select class="Year">
+            <option value="Year"> Year</option>
+            <option value="2005"> 2005</option>
+            <option value="2004"> 2004 </option>
+            <option value="2003"> 2003 </option>
+            <option value="2002"> 2002 </option>
+            <option value="2001"> 2001 </option>
+            <option value="2000"> 2000 </option>
+            <option value="1999"> 1999 </option>
+            <option value="1998"> 1998 </option>
+            </select>
+</form>
+
     <h2>Temporary Suspension of KCH Volunteering Programme</h2>
    <h3> 26th March 2024</h3>
    <p>In light of recent developments and announcements relating to the COVID-19 (Coronavirus) pandemic, the KCH Volunteering Programme has been suspended with immediate effect.
@@ -42,14 +97,13 @@ build Stagecoach into the success it has become and thank all our staff and supp
  who are too many to mention.”
    </p>
 
-   <img src="image/Anna .jpg" alt= "" width="30%"> 
+   <img src="image/Anna .jpg" alt= "" width="20%"> 
    
 <style> body {
     background-image: url(image/hh.jpg);
 }
-
-
 </style>
+
 
 </body>
 </html>
