--- a/News and Event.html
+++ b/News and Event.html
@@ -22,9 +22,8 @@
 
     <br>
 
-    <h3 style ="text-align: center ;
+    <h3 style ="text-align: left;
 color:rgb(255, 0, 0); 
-text-decoration: underline; 
 text-transform: uppercase;
  font-style: italic; 
  font-weight: 600;">Register for the events near you</h3>
@@ -73,6 +72,8 @@ text-transform: uppercase;
             <option value="1998"> 1998 </option>
             </select>
 </form>
+<br>
+<button>Submit</button>
 
     <h2>Temporary Suspension of KCH Volunteering Programme</h2>
    <h3> 26th March 2024</h3>
