--- a/Volunteer.html
+++ b/Volunteer.html
@@ -26,16 +26,13 @@
 <body>
 
     <h1>Forms : Volunteer Login Page</h1>
-<form action="" method="post"> 
-    <label for="fn"> Fullname:</label><br>
-    <input type="text" id="fn">
-</form>
+    Your name <br>
+    <input type="text" name = "" placeholder="Your Name"> <br> <br>
 
-<form action="" methods="post">
-    <label for="fn"> Password:</label><br>
-    <input type="text" id="fn">
-</form>
+    YourAddress <br>
+    <input type="text" name = "" placeholder="Your Address"> <br> <br>
 
+    <button>Submit</button>
 
     <h1> Volunteering</h1>
     <p>
